--- a/assets/demo/nap-forms/nap-forms.html
+++ b/assets/demo/nap-forms/nap-forms.html
@@ -10,32 +10,13 @@
 	    <link rel="import" href="/components/pages/product-page.html">
 	  	<script src="/demo/js/stubs.js"></script>
 	</head>
-	<body class="no-svg">
-		<h1>NAP Form Elements</h1>
-		<p>Email input</p>
-		<input-email id="primaryEmail" label="Email address*" error="Not Valid Email Address" required></input-email>
-		<p>Confirm email input</p>
+	<body class="no-svg grouped-form" style="max-width: 500px; margin: 0 auto;">
+		<input-email id="primaryEmail" label="Email address*" error="Not Valid Email Address" required class="first-form-element" style="margin-top: 0;"></input-email>
 		<input-email label="Confirm email address*" error="Email Address Does Not Match" linked="primaryEmail" required></input-email>
-		<p>Text input (required)</p>
 		<input-text name="firstname" label="First Name*" type="text" error="Not Valid" required></input-text>
-		<p>Text input</p>
 		<input-text name="surname" label="Surname" type="text" error="Not Valid"></input-text>
-		<p>Text input - prepopulated</p>
-		<input-text name="prepopulated" label="test prepopulated" type="text" error="Not Valid" value="pre populated value"></input-text>
-		<p>Password input (required)</p>
 		<input-text name="password" label="Password*" type="password" error="Not Valid" required></input-text>
-		<p>Telephone input</p>
 		<input-telephone name="telephone" label="Telephone Number*" error="Not Valid" required></input-telephone>
-		<p>Country select dropdown</p>
-		<select-country name="country" label="Country*" required></select-country>
-		<p>Select dropdown</p>
-		<select-dropdown name="enquiry" label="Your enquiry*" required tooltip="Select an option" options='[
-			{"value": "delivery", "name": "Delivery"},
-			{"value": "sizing", "name": "Sizing"},
-			{"value": "orderAssistance", "name": "Order assistance"},
-			{"value": "whatToWear", "name": "What to wear"}
-		]'></select-dropdown>
-		<p>Textarea field</p>
-		<textarea-field name="message" label="Your message*" rows=10 required></textarea-field>
+		<select-country name="country" label="Country*" class="last-form-element" required></select-country>
 	</body>
 </html>
