--- a/assets/demo/nap-live/nap-live.html
+++ b/assets/demo/nap-live/nap-live.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" type="text/css" href="/demo/css/reset.css">
     <link rel="stylesheet" type="text/css" href="/demo/css/flexboxgrid.css">
     <link rel="stylesheet" type="text/css" href="/demo/css/icon-sprite-png.css">
+    <link rel="stylesheet" type="text/css" href="/demo/css/swiper.min.css">
     <link rel="import" href="/components/polymer/polymer.html">
     <link rel="import" href="/components/component-collections/global.html">
     <link rel="import" href="/components/pages/product-page.html">
     <link rel="import" href="/components/component-collections/nap-live.html">
     <script src="/demo/js/stubs.js"></script>
-    <script src="/bower_components/swiper/dist/js/swiper.min.js"></script>
+    <script src="/demo/js/swiper.min.js"></script>
 </head>
 <body class="no-svg">
   <nap-live></nap-live>
