--- a/assets/demo/nap-product/nap-product.html
+++ b/assets/demo/nap-product/nap-product.html
@@ -15,24 +15,24 @@
 	</style>
 </head>
 <body>
-	<nap-product product='{"name":"Les Essentiels Show bandeau bikini top",
-		    "visible":true,
-		    "price":{
-		        "currency":"GBP",
-		        "divisor":100,
-		        "gross":15500
-		    },
-		    "onSale":false,
-		    "brand":{
-		        "id":1755,
-		        "name":"Eres",
-		        "urlKey":"Eres"
-		    },
-		    "id":594952,
-		    "nonReturnable":false,
-		    "badges":[
-		        "In_Stock",
-		        "Sold_as_a_set"
-		    ]}' itemscope itemtype="http://schema.org/Product"></nap-product>
+	<nap-product product='{
+	"name": "Oversized leather bomber jacket",
+	"price": {
+		"discountPercent": 60,
+		"divisor": 100,
+		"gross": 143200,
+		"currency": "GBP",
+		"original": {
+            "gross": 358000
+        }
+	},
+	"onSale": false,
+	"brand": {
+		"id": 128,
+		"name": "Marni",
+		"urlKey": "Marni"
+	},
+	"id": 540978
+}' itemscope itemtype="http://schema.org/Product"></nap-product>
 </body>
 </html>
