start padding out my sections

--- a/index.html
+++ b/index.html
@@ -136,6 +136,28 @@
     }'&gt;
 &lt;/nap-product-price&gt;
 					</code></pre></div>
+					<aside class="notes">
+						<ul>
+							<li>Pass object as string into attribute, this can be done via
+								<ul>
+									<li>Written into mark up</li>
+									<li>Passed to JS as object</li>
+								</ul>
+							</li>
+							<li>Smallest reuseable component</li>
+							<li>Why?
+								<ul>
+									<li>Completely self contained</li>
+									<li>Boring and saves dev time</li>
+								</ul>
+							</li>
+							<li>Show mark up
+								<ul>
+									<li>All that is in shadow dom, or in this case, shadydom as polyfiled</li>
+								</ul>
+							</li>
+						</ul>
+					</aside>
 				</section>
 
                 <!-- NAP Product -->
@@ -165,7 +187,21 @@
     "id": 540978
 }'&gt;&lt;/nap-product&gt;
                     </code></pre></div>
+                    <aside class="notes">
+						<ul>
+							<li>Includes nap-price component</li>
+							<li>Has interactions included, show rollover</li>
+							<li>Includes meta data about image</a>
+							<li>Show mark up
+								<ul>
+									<li>All that is in shadow dom, or in this case, shadydom as polyfiled</li>
+								</ul>
+							</li>
+						</ul>
+					</aside>
                 </section>
+
+                <!-- These are more complex using libs -->
 
 				<!-- Upsell module -->
 				<section>
@@ -231,9 +267,26 @@
                     <h1>Production-ify</h1>
                 </section>
 
+                <!-- Build -->
+                <section>
+                    <h2>Vulcanize</h2>
+                    <h2>Grunt</h2>
+                    <h2>Bundles</h2>
+                    <h2>Dist</h2>
+                    <h2>Bower</h2>
+                    <h2>Node service for demo</h2>
+                </section>
+
                 <!-- Structured Data -->
                 <section>
                     <h1>Structured Data</h1>
+                </section>
+
+                <!-- Structured Data -->
+                <section>
+                    <h2>Issues</h2>
+                    <h2>Structure data testing tool</h2>
+                    <h2>SEO</h2>
                 </section>
 
                 <!-- Monitoring -->
@@ -249,11 +302,20 @@
                 <!-- What's next -->
                 <section>
                     <h1>Coming Soon...</h1>
+					- Polyfill - conditional
+					- Perf testing
+					- Polyserve
+					- Seed-elements for starting - move to versioning each element - don’t bundle in the bower module.
+					- Skeleton CSS / Unresolved styles
                 </section>
 
                 <!-- Resources -->
                 <section>
                     <h1>Resources</h1>
+                    - Slack
+					- Polycasts YouTube
+					- Polymer docs
+					- Twitter - Eric, Rob etc
                 </section>
 
                 <!-- Shall we show it? -->
