change images, update some readme stuff

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <span>Robin Glen <a class="handle" href="https://twitter.com/arielwithlegs">@arielwithlegs</a></span>
                     </div>
                     <div class="mugshot">
-                        <img width="200" height="200" src="/images/furniture/dbod.jpeg">
+                        <img width="200" height="200" src="/images/furniture/dbod.png">
                         <span>David Boddy <a class="handle" href="https://twitter.com/threetwotwo">@threetwotwo</a></span>
                     </div>
                 </section>
