add my components details

--- a/index.html
+++ b/index.html
@@ -151,14 +151,22 @@
 									<li>Boring and saves dev time</li>
 								</ul>
 							</li>
-							<li>Show mark up
-								<ul>
-									<li>All that is in shadow dom, or in this case, shadydom as polyfiled</li>
-								</ul>
-							</li>
+							<li>Show mark up<li>
 						</ul>
 					</aside>
 				</section>
+
+                <!-- NAP Product Price -->
+                <section>
+                    <img height="600" src="/images/components-demo/price-shadow-dom.png">
+                    <aside class="notes">
+                        <ul>
+                            <li>All that is in shadow dom, or in this case, shadydom as polyfiled</li>
+                            <li>Conditions inside templates</li>
+                            <li>Schema tags built into component</li>
+                        </ul>
+                    </aside>
+                </section>                
 
                 <!-- NAP Product -->
                 <section>
@@ -201,6 +209,17 @@
 					</aside>
                 </section>
 
+                <!-- NAP Product Price -->
+                <section>
+                    <img height="800" src="/images/components-demo/product-shadow-dom.png">
+                    <aside class="notes">
+                        <ul>
+                            <li>more meta data tags</li>
+                            <li>Here is a product component that nests price</li>
+                        </ul>
+                    </aside>
+                </section>   
+
                 <!-- These are more complex using libs -->
 
 				<!-- Upsell module -->
@@ -211,6 +230,19 @@
 &lt;/nap-product-upsell&gt;
 					</code></pre>
 				</section>
+
+                <!-- NAP Product Price -->
+                <section>
+                    <img height="700" src="/images/components-demo/upsell-shadow-dom.png">
+                    <aside class="notes">
+                        <ul>
+                            <li>Complex collection</li>
+                            <li>Polymer elements - matt will talk about</li>
+                        </ul>
+                    </aside>
+                </section>   
+
+                <!-- MATT -->
 
                 <!-- HTWI module -->
                 <section>
