Update theme, add notes

--- a/index.html
+++ b/index.html
@@ -86,17 +86,38 @@
 
                 <!-- Pivot -->
                 <section>
-                    <h1>Technical Pivot</h1>
+                    <h1>The Turning Point</h1>
+                    <aside class="notes">
+	                    <ul>
+	                    	<li>Attended Google I/O - heard about Polymer 1.0</li>
+	                    	<li>Tried a basic component - easy to get started</li>
+	                    	<li>But was this going to work in production? </li>
+	                	</ul>
+                    </aside>
                 </section>
 
                 <!-- Browser Support -->
                 <section>
-                    <h1>Technical Pivot</h1>
+                    <img src="/images/pivot/browser-support.png" />
                     <aside class="notes">
-                        W3 Standard - soon no Polyfill needed
-                        Feels like Web dev, no framework in the way
-                        Easy to adopt / low entry level
-                        Speed to development.
+	                    <ul>
+	                    	<li>Browser support currently poor</li>
+	                    	<li>Image = aggrgation of all 4 standards needed for Web Components</li>
+	                    	<li>Chrome fine, Firefox and Edge getting there. IE never, Safari??</li>
+	                	</ul>
+                    </aside>
+                </section>
+
+                <!-- Browser Support -->
+                <section>
+                    <h1>Risk vs Reward</h1>
+                    <aside class="notes">
+                    	<ul>
+	                    	<li>W3 Standard - soon no Polyfill needed</li>
+	                    	<li>Not a framework - can pick and choose when you want to use it.</li>
+	                    	<li>Feels like Web dev, no framework in the way</li>
+	                    	<li>Speed to development high.</li>
+	                	</ul>
                     </aside>
                 </section>
 
@@ -106,7 +127,7 @@
                 </section>
 
 				<!-- NAP Product Price -->
-				<section>
+				<section data-background="#ffffff">
 					<div style="width: 50%; float: left;">
 					<iframe height="50" width="100%" src="/demo/nap-product/nap-product-price.html" scrolling="no"></iframe>
 					<pre style="margin: 0; width: 100%;"><code class="html" data-trim>
@@ -139,7 +160,7 @@
 				</section>
 
                 <!-- NAP Product -->
-                <section>
+                <section data-background="#ffffff">
                     <div style="width: 50%; float: left;">
                     <iframe height="550" src="/demo/nap-product/nap-product.html" scrolling="no"></iframe>
                     </div>
@@ -168,7 +189,7 @@
                 </section>
 
 				<!-- Upsell module -->
-				<section>
+				<section data-background="#ffffff">
 					<iframe height="350" width="100%" src="/demo/upsell-modules/nap-product-upsell.html" scrolling="no"></iframe>
 					<pre style="margin: 0; width: 100%;"><code class="html" data-trim>
 &lt;nap-product-upsell pids='[508770, 543952, 540978, 538739, 538736, 538734]'&gt;
@@ -177,12 +198,12 @@
 				</section>
 
                 <!-- HTWI module -->
-                <section>
+                <section data-background="#ffffff">
                     <iframe height="1000" width="100%" src="/demo/upsell-modules/nap-htwi-module.html" style="margin-top: -70px;" scrolling="no"></iframe>
                 </section>
 
                 <!-- HTWI module code -->
-                <section>
+                <section data-background="#ffffff">
                     <pre style="margin: 0; width: 100%;"><code class="html" data-trim>
 &lt;nap-htwi-module pid="597093" heading="How to wear it"&gt;&lt;/nap-htwi-module&gt;
                     </code></pre>
@@ -190,7 +211,7 @@
                 </section>
 
                 <!-- NAP Live -->
-				<section>
+				<section data-background="#ffffff">
 					<iframe height="350" width="100%" src="/demo/nap-live/nap-live.html" scrolling="no"></iframe>
 					<pre style="margin: 0; width: 100%;"><code class="html" data-trim>
 &lt;nap-live&gt;&lt;/nap-live&gt;
@@ -198,7 +219,7 @@
 				</section>
 
                 <!-- NAP Forms -->
-				<section>
+				<section data-background="#ffffff">
 					<iframe height="400" width="100%" src="/demo/nap-forms/nap-forms.html" scrolling="no"></iframe>
 					<pre style="margin: 0; width: 100%;"><code class="html" data-trim>
 &lt;input-email id="primaryEmail" label="Email address*" error="Not Valid Email Address" required&gt;&lt;/input-email&gt;
@@ -211,7 +232,7 @@
 					</code></pre>
 				</section>
 
-				<section>
+				<section data-background="#ffffff">
 					<iframe height="350" width="100%" src="/demo/nap-widgets/nap-wishlist-button.html" scrolling="no"></iframe>
 					<pre style="margin: 0; width: 100%;"><code class="html" data-trim>
 &lt;nap-wishlist-button wishlists='[...]'&gt;&lt;/nap-wishlist-button&gt;
